# QuizWeaver

./: .clinerules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ETHICAL_GUIDELINES.md  FEATURE_BACKLOG.md  INSTALLATION.md  LICENSE  README.md  SETUP_STATUS.md  config.yaml  config.yaml.example  demo_script.md  docker-compose.yml  gunicorn.conf.py  implementation_plan.md  main.py  pyproject.toml  qa_guidelines.txt  requirements.txt  reset_demo.sh  run.bat  run.sh  workshop_slides.md
.claude/: settings.json  settings.local.json
Content_Summary/: life_science mt.docx
Project_Planning/: 01_System_Architecture.md  02_Implementation_Roadmap.md  03_Agent_Specifications.md  04_Evaluation_Rubric.md  05_Development_Practices.md
agent_prompts/: README.md  agent_a_testing_docs.txt  agent_b_web_ui.txt  agent_d_demo_prep.txt
data/: cas_standards.json  ccss_ela_standards.json  ccss_math_standards.json  gse_standards.json  ils_standards.json  ngss_standards.json  ngsss_standards.json  njsls_standards.json  sol_standards.json  teks_standards.json
demo_data/: sample_classes.json  sample_lessons.txt  setup_demo.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BACKLOG.md  CLI_AUDIT.md  COMPETITIVE_ANALYSIS.md  COST_STRATEGY.md  DEMO.md  DEMO_VIDEO_SCRIPT.md  E2E_TEST_REPORT.md  FEEDBACK_REVIEW.md  REPO_AUDIT.md  ROADMAP.md  SECURITY_AUDIT.md  SOURCE_MATERIALS_WORKFLOW.md  TOOLING_RECOMMENDATIONS.md  TRIAL_RUN_REPORT.md  USER_GUIDE.md
migrations/: 001_add_classes.sql  002_add_question_sort_order.sql  003_add_study_materials.sql  004_add_variants_and_rubrics.sql  005_extend_performance_data.sql  006_add_users.sql  007_add_standards.sql  008_add_question_bank.sql  009_add_accessibility_prefs.sql  009_add_lesson_plans.sql  009_expand_standards.sql  010_add_generation_metadata.sql  011_pacing_guides.sql  012_standards_curriculum_content.sql  (+1 more)
(+283 files in other folders)
